# chadwick

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  ChangeLog  ChangeLog.md  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  configure.in
.github/workflows/: clang-tidy.yml  tools.yml
contrib/: gamelogsml.py  parsedmb.py
contrib/regress/: boxcrash.sh  boxdiff.sh  eventdiff.py  gamediff.py  tool.py
doc/: Makefile  chapter1.rst  conf.py  cwbox.rst  cwcomment.rst  cwdaily.rst  cwevent.rst  cwgame.rst  cwsub.rst  cwtools.rst  index.rst  manual.sgml
doc/_templates/: layout.html
src/: Makefile.am  borland.mak  chadwick
src/cwlib/: Makefile.am  book.c  book.h  borland.mak  box.c  box.h  chadwick.h  file.c  file.h  game.c  game.h  gameiter.c  gameiter.h  league.c  league.h  lint.c  parse.c  parse.h  roster.c  roster.h  util.h
src/cwtools/: Makefile.am  borland.mak  buffer.h  cwbox.c  cwboxsml.c  cwboxxml.c  cwcomment.c  cwdaily.c  cwevent.c  cwgame.c  cwlog.c  cwpbp.c  cwscore  cwscore.c  cwstats.c  cwsub.c  cwtools.c  xmlwrite.c  xmlwrite.h
src/python/: .gitignore  Makefile.am  Makefile.swig  libchadwick.i  py2exe.py  setup.py
src/python/chadwick/: __init__.py  boxscore.i  game.i  libchadwick.i  roster.i  scorebook.i  state.i
src/score/: Makefile.am  Makefile.swig  Makefile.xc  boxscore.py  chadwick.py  dialogabout.py  dialogboxview.py  dialogcomment.py  dialogdecision.py  dialoggame.py  dialogimport.py  dialoglineup.py  dialognewgame.py  dialogreport.py  dialogroster.py  dw.py  frameentry.py  game.py  gameeditor.py  gridlineup.py  h2h.py  icons.py  libchadwick.def  libchadwick.i  panelboxscore.py  panelgamelist.py  panellinescore.py  panelnarrative.py  panelplayerlist.py  panelrunners.py  panelstate.py  panelteamlist.py  patch.py  reports.py  scorebook.py  setup.py  standings.py  statscan.py  teamreport.py  weekly.py  (+1 more)
src/score/report/: events.py  register.py  statline.py  team.py
