dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/cwlib/chadwick.h)
AM_INIT_AUTOMAKE(chadwick, 0.5.1)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_MEMBER([struct tm.tm_gmtoff],
	        [AC_DEFINE(HAVE_STRUCT_TM_TM_GMTOFF)],,
                [#include <time.h>])

AC_CHECK_DECL([_timezone],
              [AC_DEFINE(HAVE_UNDERSCORE_TIMEZONE)],,
              [#include <time.h>])

dnl Checks for library functions.

AC_OUTPUT(src/cwlib/Makefile \
          src/cwtools/Makefile \
	  src/python/Makefile \
	  src/score/Makefile \
          src/Makefile \
  	  Makefile)
