dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([src/cwlib/chadwick.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(chadwick, 0.5.2.20091002)

dnl Checks for programs.
AC_PROG_CC
LT_INIT

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_MEMBER([struct tm.tm_gmtoff],
	        [AC_DEFINE(HAVE_STRUCT_TM_TM_GMTOFF)],,
                [#include <time.h>])

AC_CHECK_DECL([_timezone],
              [AC_DEFINE(HAVE_UNDERSCORE_TIMEZONE)],,
              [#include <time.h>])

dnl Checks for library functions.

AC_CONFIG_FILES([src/cwlib/Makefile \
          src/cwtools/Makefile \
	  src/python/Makefile \
	  src/score/Makefile \
          src/Makefile \
  	  Makefile])
AC_OUTPUT
