## 
## $Source$
## $Date$
## $Revision$
##
## DESCRIPTION:
## Automake input file for Chadwick library
##
## This file is part of Chadwick, a library for baseball play-by-play and stats
## Copyright (C) 2002, Ted Turocy (turocy@econ.tamu.edu)
##
## This library is free software; you can redistribute it and/or
## modify it under the terms of the GNU Lesser General Public
## License as published by the Free Software Foundation; either
## version 2.1 of the License, or (at your option) any later version.
##
## This library is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
## Lesser General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public
## License along with this library; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
##

lib_LTLIBRARIES = libchadwick.la

libchadwick_la_SOURCES = \
	chadwick.h \
	book.c \
	book.h \
	file.c \
	file.h \
	game.c \
	game.h \
	gameiter.c \
	gameiter.h \
	league.c \
	league.h \
	parse.c \
	parse.h \
	roster.c \
	roster.h

pkginclude_HEADERS = \
	chadwick.h \
	book.h \
	file.h \
	game.h \
	gameiter.h \
	league.h \
	parse.h \
	roster.h