#
# This file is part of Chadwick
# Copyright (c) 2002-2021, Dr T L Turocy (ted.turocy@gmail.com)
#                          Chadwick Baseball Bureau (http://www.chadwick-bureau.com)
#
# FILE: src/cwlib/Makefile.am
# Automake input script for cwlib subdirectory
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#

lib_LTLIBRARIES = libchadwick.la

libchadwick_la_SOURCES = \
	chadwick.h \
	book.c \
	book.h \
	box.c \
	box.h \
	file.c \
	file.h \
	game.c \
	game.h \
	gameiter.c \
	gameiter.h \
	league.c \
	league.h \
	lint.c \
	parse.c \
	parse.h \
	roster.c \
	roster.h

pkginclude_HEADERS = \
	chadwick.h \
	book.h \
	box.h \
	file.h \
	game.h \
	gameiter.h \
	league.h \
	parse.h \
	roster.h
